Fixed arrow overlapping infobox

--- a/src/styles/_imageview.scss
+++ b/src/styles/_imageview.scss
@@ -52,7 +52,6 @@
 		width: 15%;
 		height: calc(100% - 60px);
 		top: 60px;
-		z-index: 1;
 
 		&--previous { left: 0; }
 
